# Memrise-RAG-Project

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  answer.py  answers.json  ask.py  config.py  ingest.py  pyproject.toml  test_answer.py
answers/: answers_french.json  answers_german.json  answers_italian.json  answers_spanish.json
indexes/: vocabulary_index.faiss
indexes/french/: vocabulary_index.faiss  vocabulary_metadata.json
indexes/german/: vocabulary_index.faiss
indexes/italian/: vocabulary_index.faiss
indexes/spanish/: vocabulary_index.faiss  vocabulary_metadata.json
sample_data/: travel.txt
sample_data/french/: accommodation.txt  greetings.txt  health.txt  internet.txt  navigation.txt  questions.json  restaurant.txt  shopping.txt  time.txt  travel.txt  weather.txt
sample_data/generation/: data_generation_prompt.txt  tokens.py
sample_data/german/: accommodation.txt  greetings.txt  health.txt  internet.txt  navigation.txt  questions.json  restaurant.txt  shopping.txt  time.txt  travel.txt  weather.txt
sample_data/italian/: accommodation.txt  greetings.txt  health.txt  internet.txt  navigation.txt  questions.json  restaurant.txt  shopping.txt  time.txt  travel.txt  weather.txt
sample_data/spanish/: accomodation.txt  greetings.txt  health.txt  internet.txt  navigation.txt  questions.json  restaurant.txt  shopping.txt  time.txt  weather.txt
scripts/: answer.py  ask.py  generate_language_data.py  ingest.py  main.py  test_answer.py
