[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "RAG Project for vocabulary generation"
authors = ["User <user@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 