[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "RAG Project for vocabulary generation"
authors = ["User <user@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"
faiss-cpu = "1.7.4"
numpy = "^1.24.0"
tiktoken = "^0.5.1"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 